# netease-cloud-music-cli

./: .gitignore  README.md  openapi.yaml  pyproject.toml  requirements.txt  server.py  setup.py
src/ncm/: __init__.py  cli.py  client.py  crypto.py  downloader.py  models.py
